[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hdpa"
version = "1.0.0"
description = "Sauvola adaptive thresholding for binarizing scanned historical documents"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Faizan Zafar" }]
keywords = ["binarization", "sauvola", "thresholding", "opencv", "document-image-analysis"]
dependencies = [
    "numpy>=1.21",
    "opencv-python>=4.5",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
hdpa = "hdpa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
